// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebConfig decorator should add WebConfig metadata to a class when decorated with @WebConfig 1`] = `
{
  "test2Method": [
    PropDecoratorFactory {
      "order": 1,
    },
  ],
  "testMethod": [
    PropDecoratorFactory {
      "order": 1,
    },
  ],
}
`;

exports[`WebConfig decorator should add WebConfig metadata to a class when decorated with @WebConfig(order) 1`] = `
{
  "test2Method": [
    PropDecoratorFactory {
      "order": 100,
    },
  ],
  "testMethod": [
    PropDecoratorFactory {
      "order": 50,
    },
  ],
}
`;

exports[`WebConfigAfterControllers decorator should add WebConfigAfterControllers metadata to a class when decorated with @WebConfigAfterControllers 1`] = `
{
  "test2Method": [
    PropDecoratorFactory {
      "order": 1,
    },
  ],
  "testMethod": [
    PropDecoratorFactory {
      "order": 1,
    },
  ],
}
`;

exports[`WebConfigAfterControllers decorator should add WebConfigAfterControllers metadata to a class when decorated with @WebConfigAfterControllers(order) 1`] = `
{
  "test2Method": [
    PropDecoratorFactory {
      "order": 100,
    },
  ],
  "testMethod": [
    PropDecoratorFactory {
      "order": 50,
    },
  ],
}
`;
